Fix overflow

--- a/_scss/base/_base.scss
+++ b/_scss/base/_base.scss
@@ -1,3 +1,7 @@
+img {
+	max-width: 100%;
+}
+
 .navbar-brand {
 	text-transform: uppercase;
 	letter-spacing: -1px;
