--- a/_scss/layout/_sidebar.scss
+++ b/_scss/layout/_sidebar.scss
@@ -1,3 +1,9 @@
+.sidebar {
+	.widget {
+		overflow: hidden;
+	}
+}
+
 #social-networks {
 	li {
 		> span {
